# SDLgame

./: .gitignore  CMakeLists.txt  GIT.md  Move.cpp  README.md  build.bat  main.cpp
client/: CMakeLists.txt
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake  LibraryPaths.cmake  readme.md
lib/logger/: logger.cpp  logger.h
lib/tinyxml/: tinyxml2.cpp  tinyxml2.h
server/: CMakeLists.txt
server/src/: ClientTCPConnection.h  MyTCPClient.h  MyTCPServer.h  NetManager.h  ServerTCPConnection.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  main.cpp  main2.cpp
src/: main.cpp
